--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "name": "metro",
     "version": "3.0.15",
     "description": "The front-end framework for developing responsive, mobile projects on the web in Windows Metro Style.",
+    "main":"index.html",
+     "scripts": {
+    "start": "node server.js"
+  },
     "keywords": [
         "css",
         "less",
@@ -28,6 +32,7 @@
         "url": "http://metroui.org.ua/license.html"
     },
     "devDependencies": {
+        "express": "^4.14.0",
         "autoprefixer-core": "^5.1.11",
         "grunt": "^0.4.5",
         "grunt-autoprefixer": "^3.0.0",
